--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         <p>bhvggsbshsvggggb </p>
      </div>
      <div class="skills-box">
+        <i class="fa-brands fa-bootstrap" style="color: #74C0FC;"></i>
+        <h3>JAVA SCRIPT</h3>
+        <p>bhvggsbshsvggggb </p>
+     </div>
+     <div class="skills-box">
         <i class="fa-brands fa-react" style="color: #74C0FC;"></i>
         <h3>REACT</h3>
         <p>bhvggsbshsvggggb</p>
@@ -116,26 +121,26 @@
     <h2 class="heading">Latest <span>Projects</span></h2>
     <div class="works-container">
     <div class="works-card">
-        <img src="download.jpg" alt="download.jpg">
+        <img src="htmll.jpg" alt="download.jpg">
         <div class="works-layer">
-            <h4>Web Design</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <h4>HTML WEBLAYOUT</h4>
+            <p></p>
+            <a href=" https://bhagyashreebehara.github.io/Bhagyashreebehara/"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="download.jpg" alt="">
+        <img src="script.jpg" alt="">
         <div class="works-layer">
-            <h4>Web Design</h4>
+            <h4>JAVA SCRIPYT</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
             
         </div>
     </div>
     <div class="works-card">
         <img src="download.jpg" alt="">
         <div class="works-layer">
-            <h4>Web Design</h4>
+            <h4>REACT</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
             <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
@@ -143,25 +148,25 @@
     <div class="works-card">
         <img src="" alt="">
         <div class="works-layer">
-            <h4>Web Design</h4>
+            <h4>FLYER-1</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="Artboard 2.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
         <img src="" alt="">
         <div class="works-layer">
-            <h4>Web Design</h4>
+            <h4>FLYER-2</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="Artboard 1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
         <img src="" alt="">
         <div class="works-layer">
-            <h4>Web Design</h4>
+            <h4>POSTER-1</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
 </div>
