--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="social-media">
                 <a href=""><i class="fa-brands fa-whatsapp"></i></a>
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="http://www.linkedin.com/in/bhagyashree-behara-59b519305"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/bhagyashreebehara/"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="#" class="btn">Download</a>
         </div>
@@ -89,7 +89,7 @@
         <p>bhvggsbshsvggggb </p>
      </div>
      <div class="skills-box">
-        <i class="fa-brands fa-bootstrap" style="color: #74C0FC;"></i>
+        <i class="fa-brands fa-javascript" style="color: #74C0FC;"></i>
         <h3>JAVA SCRIPT</h3>
         <p>bhvggsbshsvggggb </p>
      </div>
