--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="works-layer">
             <h4>POSTER-2</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="flyer3.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
@@ -182,7 +182,7 @@
         <div class="works-layer">
             <h4>POSTER-3</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="b-3 Basketballposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
@@ -190,7 +190,7 @@
         <div class="works-layer">
             <h4>POSTER-4</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="b-4 Watchposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
@@ -198,7 +198,7 @@
         <div class="works-layer">
             <h4>POSTER-5</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="b-5 Pancake Poster (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
 </div>
