--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/wacth.jpeg" alt="">
         <div class="works-layer">
             <h4>POSTER-3</h4>
             <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
