--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hi, Myself</h3>
-            <h1>Bhagyashree</h1>
+            <h1>Bhagyashree Behara</h1>
             <h3>And I'am a <span></span></h3>
-            <p>UI/UX Developer and Designer with a creative,develop implement
+            <p>UI/UX Developer and Designer with a creative thinking. Currently seeking
+                for a challenging positions in a reputed organizations where I can leran new skills,
+                expand my knowledge & learning. And looking for an opportunity where I can built my potential
+                and contribute to the organization growth.
                 <br>
-                websites,web application and interactive web interfaces.
+                
             </p>
             <div class="social-media">
                 <a href=""><i class="fa-brands fa-whatsapp"></i></a>
@@ -62,8 +65,14 @@
     <div class="about-content">
         <h2 class="heading">ABOUT <span>Me</span></h2>
         <br>
-        <h3>Frontend Developer</h3>
-        <p>hhfbhsbgyeeebhfk kkkkkkkmnjhvfgg</p>
+        <h3>Hello !</h3>
+        <p>Hi ! I'am Bhagyashree.
+            <br>
+            I'am a UI/UX Developer & UI/UX Designer,
+            And a Frontend Developer...!
+            <br>
+            Currently, I have completed My UI/UX Course in Tech Mahindra Foundation.
+        </p>
         <a href="#" class="btn">Read more</a>
     </div>
 </section>
@@ -75,43 +84,43 @@
     <div class="skills-container">
      <div class="skills-box">
         <i class="fa-brands fa-html5" style="color: #74C0FC;"></i>
-        <h3>HTML5/CSS3</h3>
-        <p>bhvggsbshsvggggb </p>
+        <h3>HTML5</h3>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-css3-alt" style="color: #74C0FC;"></i>
         <h3>CSS-3</h3>
-        <p>bhvggsbshsvggggb </p>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-bootstrap" style="color: #74C0FC;"></i>
         <h3>BOOTSTRAP</h3>
-        <p>bhvggsbshsvggggb </p>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-javascript" style="color: #74C0FC;"></i>
         <h3>JAVA SCRIPT</h3>
-        <p>bhvggsbshsvggggb </p>
+        <p> </p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-react" style="color: #74C0FC;"></i>
         <h3>REACT</h3>
-        <p>bhvggsbshsvggggb</p>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-wordpress" style="color: #74C0FC;"></i>
         <h3>WORDPRESS</h3>
-        <p>bhvggsbshsvggggb</p>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-brands fa-figma" style="color: #65a8e6;"></i>
         <h3>FIGMA</h3>
-        <p>bhvggsbshsvggggb</p>
+        <p></p>
      </div>
      <div class="skills-box">
         <i class="fa-solid fa-palette" style="color: #74C0FC;"></i>
         <h3>PHOTOSHOP</h3>
-        <p>bhvggsbshsvggggb</p>
+        <p></p>
      </div>
     </div>
 </section>
@@ -121,7 +130,7 @@
     <h2 class="heading">Latest <span>Projects</span></h2>
     <div class="works-container">
     <div class="works-card">
-        <img src="htmll.jpg" alt="download.jpg">
+        <img src="./images/htmll.jpg" alt="download.jpg">
         <div class="works-layer">
             <h4>HTML WEBLAYOUT</h4>
             <p></p>
@@ -129,76 +138,92 @@
         </div>
     </div>
     <div class="works-card">
-        <img src="script.jpg" alt="">
+        <img src="./images/script.jpg" alt="">
         <div class="works-layer">
-            <h4>JAVA SCRIPYT</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            <h4>JAVA SCRIPT</h4>
+            <p></p>
+            <a href=" https://bhagyashreebehara.github.io/Javaworkss/"><i class="fa-solid fa-up-right-from-square"></i></a>
             
         </div>
     </div>
     <div class="works-card">
-        <img src="download.jpg" alt="">
+        <img src="" alt="">
         <div class="works-layer">
             <h4>REACT</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
+            <p></p>
             <a href="#home"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/Artboard 2.jpg" alt="">
         <div class="works-layer">
             <h4>FLYER-1</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="Artboard 2.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p></p>
+            <a href="./images/Artboard 2.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/Artboard 1.jpg" alt="">
         <div class="works-layer">
             <h4>FLYER-2</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="Artboard 1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p></p>
+            <a href="./images/Artboard 1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/POSTER-1.jpg" alt="">
         <div class="works-layer">
             <h4>POSTER-1</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p></p>
+            <a href="./images/POSTER-1.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/flyer3.jpg" alt="">
         <div class="works-layer">
             <h4>POSTER-2</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="flyer3.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p></p>
+            <a href="./images/flyer3.jpg"><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+    </div>
+    <div class="works-card">
+        <img src="./images/basketball.jpeg" alt="">
+        <div class="works-layer">
+            <h4>POSTER-3</h4>
+            <p></p>
+            <a href="./images/b-3 Basketballposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
         <img src="./images/wacth.jpeg" alt="">
         <div class="works-layer">
-            <h4>POSTER-3</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="b-3 Basketballposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
-        </div>
-    </div>
-    <div class="works-card">
-        <img src="" alt="">
-        <div class="works-layer">
             <h4>POSTER-4</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="b-4 Watchposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p</p>
+            <a href="./images/b-4 Watchposter (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/pancake.jpeg" alt="">
         <div class="works-layer">
             <h4>POSTER-5</h4>
-            <p>ghbhnjjdsseftvg bhvcfdxddcvgytrewsdrtff.</p>
-            <a href="b-5 Pancake Poster (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <p></p>
+            <a href="./images/b-5 Pancake Poster (1).png"><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+    </div>
+    <div class="works-card">
+        <img src="" alt="">
+        <div class="works-layer">
+            <h4>FIGMA (MOBILE APP)</h4>
+            <p></p>
+            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+    </div>
+    <div class="works-card">
+        <img src="" alt="">
+        <div class="works-layer">
+            <h4>FIGMA (WEB APPLICATION)</h4>
+            <p></p>
+            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
 </div>
@@ -207,7 +232,7 @@
 <!-------CONTACT SECTION------------------->
 <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
-    <form action="#">
+    <form action="">
         <div class="input-box">
         <input type="text" placeholder="Enter your FullName">
         <input type="text" placeholder="Enter your @mail Address">
@@ -217,7 +242,7 @@
             <input type="text" placeholder="Email Subject">
         </div>
         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <input type="submit" value="Send Message" class="btn">
+        <a href=""><input type="submit" value="Send Message" class="btn"></a>
     </form>
 
 <!-------FOOTER SECTION------------------->
