--- a/index.html
+++ b/index.html
@@ -213,6 +213,22 @@
     <div class="works-card">
         <img src="" alt="">
         <div class="works-layer">
+            <h4>WORDPRESS<h4>
+            <p></p>
+            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+    </div>
+    <div class="works-card">
+        <img src="" alt="">
+        <div class="works-layer">
+            <h4>WOOCOMMERCE</h4>
+            <p></p>
+            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+    </div>
+    <div class="works-card">
+        <img src="" alt="">
+        <div class="works-layer">
             <h4>FIGMA (MOBILE APP)</h4>
             <p></p>
             <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
