--- a/index.html
+++ b/index.html
@@ -211,19 +211,19 @@
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/WPWO.jpeg" alt="">
         <div class="works-layer">
             <h4>WORDPRESS<h4>
             <p></p>
-            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="https://dev-bsbstatic.pantheonsite.io/"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
-        <img src="" alt="">
+        <img src="./images/WP.jpeg" alt="">
         <div class="works-layer">
             <h4>WOOCOMMERCE</h4>
             <p></p>
-            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="https://dev-bhagyawordpress.pantheonsite.io/"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card">
