--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Bhagyashree Behara</h1>
             <h3>And I'am a <span></span></h3>
             <p>UI/UX Developer and Designer with a creative thinking. Currently seeking
-                for a challenging positions in a reputed organizations where I can leran new skills,
+                for a challenging positions in a reputed organizations where I can leran new skills,to
                 expand my knowledge & learning. And looking for an opportunity where I can built my potential
                 and contribute to the organization growth.
                 <br>
