--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="#" class="btn">Download</a>
         </div>
         <div class="home-img">
-            <img src="s3.jpg" alt="">
+            <img src="./images/PIC.jpeg" alt="">
         </div>
     </section>
 
