--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p></p>
      </div>
      <div class="skills-box">
-        <i class="fa-brands fa-javascript" style="color: #74C0FC;"></i>
+        <i class="fa-brands fa-js" style="color: #74C0FC;"></i>
         <h3>JAVA SCRIPT</h3>
         <p> </p>
      </div>
