--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#contact">Contact</a>
             <br>
             <br>
-            <a href="#" class="btn">Download</a>
+            <a href="./images/My resume.docx" class="btn">Download</a>
 
         </nav>
     </header>
@@ -49,7 +49,7 @@
                 <a href="http://www.linkedin.com/in/bhagyashree-behara-59b519305"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/bhagyashreebehara/"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="#" class="btn">Download</a>
+            <a href="./images/My resume.docx" class="btn">Download</a>
         </div>
         <div class="home-img">
             <img src="./images/PIC.jpeg" alt="">
