--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="http://www.linkedin.com/in/bhagyashree-behara-59b519305"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/bhagyashreebehara/"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./images/My resume.docx" class="btn">Download</a>
+            <a href="./images/My resume.docx"  target="_blank" class="btn">Download</a>
         </div>
         <div class="home-img">
             <img src="./images/PIC.jpeg" alt="">
@@ -73,7 +73,31 @@
             <br>
             Currently, I have completed My UI/UX Course in Tech Mahindra Foundation.
         </p>
-        <a href="#" class="btn">Read more</a>
+        <div class="title">
+            <p class="tab-links active-link" onclick="opentab('EDUCATION', this)">EDUCATION</p>
+            <p class="tab-links" onclick="opentab('TECHNICAL SKILLS', this)">TECHNICAL SKILLS</p>
+            <p class="tab-links" onclick="opentab('SOFT SKILLS', this)">SOFT SKILLS</p>
+
+        </div>
+        <div class="tab-content active-tab" id="EDUCATION">
+         <ul>
+            <li><span>2024 UI/UX Developer & Designer training at Tech Mahindra Smart Academy</span><br>Designing & Developing Websites/Weblayout</li>
+            <li><span>2021-2024</span><br>B.Tech(Electrical & Electronic Engineering)at Sanketika Vidya Parishad Engineering College</li>
+            <li><span>2018-2021</span><br>Diploma(Electrical & Electronic Engineering) at Sanketika Polytechnic College</li>
+        </ul>
+        </div>
+        <div class="tab-content" id="TECHNICAL SKILLS">
+            <ul>
+        <li><span>Designing Skills</span><br>Photoshop, Wireframing Prototyping & Figma</li>
+        <li><span>Developing Skills</span><br>HTML, CSS, JAVASCRIPT, BOOTSTRAP, REACT and Responsive Desinging</li>
+            </ul>
+    </div>
+    <div class="tab-content" id="SOFT SKILLS">
+     <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    </div>
     </div>
 </section>
 
@@ -221,11 +245,11 @@
         </div>
     </div>
     <div class="works-card" data-name="Designing">
-        <img src="" alt="">
+        <img src="./images/weblayout.jpeg" alt="">
         <div class="works-layer">
             <h4>Weblayout Design</h4>
             <p></p>
-            <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="./images/B.Weblayout.png"><i class="fa-solid fa-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="works-card" data-name="Developing">
