--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <section class="about" id="about">
     <div class="about-img">
-        <img src="" alt="">
+        <img src="" alt="certificate">
     </div>
     <div class="about-content">
         <h2 class="heading">ABOUT <span>Me</span></h2>
