--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="http://www.linkedin.com/in/bhagyashree-behara-59b519305"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/bhagyashreebehara/"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./images/My resume.docx"  target="_blank" class="btn">Download</a>
+            <a href="./images/My resume.pdf"  target="_blank" class="btn">Download</a>
         </div>
         <div class="home-img">
             <img src="./images/PIC.jpeg" alt="">
