--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#contact">Contact</a>
             <br>
             <br>
-            <a href="./images/My resume.docx" class="btn">Download</a>
+            <a href="./images/My resume (2).docx" class="btn">Download</a>
 
         </nav>
     </header>
